--- a/index.html
+++ b/index.html
@@ -580,10 +580,11 @@
   <style>
     #generatePDF {
       position: absolute;
-      top: 986px;
-      right: 632px;
+      top: 880px;
+      right: 380px;
       z-index: 1000;
       padding: 10px;
+      margin-bottom: 200px;
       background-color: rgb(198, 197, 197);
   
     }
