--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@
       padding: 10px;
       margin-bottom: 200px;
       background-color: rgb(198, 197, 197);
+      display:inline-block;
   
     }
     
