--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           </td>
           <td
             style="width:85pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt">
-            <p class="s6" style="padding-top: 1pt;text-indent: 0pt;text-align: center;">19/06/2024</p>
+            <p class="s6" style="padding-top: 1pt;text-indent: 0pt;text-align: center;"> <span contenteditable="true"></span></p>
           </td>
         </tr>
         <tr style="height:36pt">
@@ -579,15 +579,14 @@
   </div>
   <style>
     #generatePDF {
-      position: absolute;
-      top: 880px;
-      right: 380px;
-      z-index: 1000;
       padding: 10px;
       margin-bottom: 200px;
       background-color: rgb(198, 197, 197);
       display:inline-block;
-  
+      border-radius:5px;
+      font-family:Roboto-Bold;
+      cursor: pointer;
+      
     }
     
   </style>
